@@ -1659,12 +1659,11 @@ Index: localedata/locales/pt_BR
 ===================================================================
 --- localedata/locales/pt_BR.orig
 +++ localedata/locales/pt_BR
-@@ -121,6 +121,8 @@
+@@ -121,6 +121,7 @@
  date_fmt       "<U0025><U0061><U0020><U0025><U0062><U0020><U0025><U0065>/
  <U0020><U0025><U0048><U003A><U0025><U004D><U003A><U0025><U0053><U0020>/
  <U0025><U005A><U0020><U0025><U0059>"
-+%  FIXME: found in CLDR
-+first_weekday 2
++first_weekday 1
  END LC_TIME
  
  LC_PAPER
