@@ -12,6 +12,8 @@ glibc (2.3.6.ds1-5) UNRELEASED; urgency=low
 
   [ Denis Barbier ]
   * Add sr_ME and sr_RS locales, and keep sr_CS for backward compatibility.
+  * First week of day is Sunday in Brazil.  Closes: #385859
+    Thanks Gunther and Felipe Augusto van de Wiel.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Aug 2006 21:04:20 +0200
 
